pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__multiple_machines_before_generate_all.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "artifact-one",
            status: "Pending",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "artifact-two",
            status: "Pending",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-two",
            target_type: "nixos",
            name: "artifact-one",
            status: "Pending",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-two",
            target_type: "nixos",
            name: "artifact-two",
            status: "Pending",
            has_logs: false,
        },
    ],
    error: None,
}

Rendered:
"┌Artifacts (4)────────────────────┐┌Logs: machine-one/artifact-one───┐"
"│> ○ [N] machine-one/artifact-one ││No logs yet. Generate this       │"
"│  ○ [N] machine-one/artifact-two ││artifact to see output.          │"
"│  ○ [N] machine-two/artifact-one ││                                 │"
"│  ○ [N] machine-two/artifact-two ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"└─────────────────────────────────┘│                                 │"
"j/k:nav  Enter:gen  a:all  l:log  E│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
