pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__progress_running_generator.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratingSnapshot {
    artifact_name: "ssh-key",
    step: "RunningGenerator",
    is_regen: false,
    log_line_count: 0,
}

Rendered:
"Generating: ssh-key                                         "
"────────────────────────────────────────────────────────────"
"✓ Check  ⟳ Generating  ○ Serialize                          "
"                                                            "
"┌Generate output───────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
