pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__progress_serializing.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratingSnapshot {
    artifact_name: "ssh-key",
    step: "Serializing",
    is_regen: true,
    log_line_count: 1,
}

Rendered:
"Regenerating: ssh-key                                       "
"────────────────────────────────────────────────────────────"
"✓ Check  ✓ Generate  ⟳ Serializing                          "
"                                                            "
"┌Serialize output──────────────────────────────────────────┐"
"│| Starting serialization...                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
