pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__prompt_hidden_mode.snap
---
source: tests/tui/view_tests.rs
assertion_line: 452
expression: result.to_string()
---
State:
PromptSnapshot {
    artifact_name: "ssh-key",
    prompt_index: 0,
    total_prompts: 1,
    current_prompt: Some(
        PromptSnapshotEntry {
            name: "passphrase",
            description: Some(
                "Enter the SSH key passphrase",
            ),
        },
    ),
    input_mode: "hidden",
    buffer: "secret123",
    collected_count: 0,
}

Rendered:
"Prompt: ssh-key [1/1]                                       "
"                                                            "
"────────────────────────────────────────────────────────────"
"Field: passphrase                                           "
"Enter the SSH key passphrase                                "
"                                                            "
"                                                            "
"┌Input─────────────────────────────────────────────────────┐"
"│[hidden] > *********█                                     │"
"└──────────────────────────────────────────────────────────┘"
"Enter: submit | Esc: cancel                                 "
"                                                            "
