pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__prompt_initial_line_mode.snap
---
source: tests/tui/view_tests.rs
expression: output
---
"Prompt: ssh-key [1/1]                                       "
"                                                            "
"────────────────────────────────────────────────────────────"
"Field: passphrase                                           "
"Enter the SSH key passphrase                                "
"                                                            "
"                                                            "
"┌Input─────────────────────────────────────────────────────┐"
"│[line] > █                                                │"
"└──────────────────────────────────────────────────────────┘"
"Tab: change mode | Enter: submit | Esc: cancel              "
"                                                            "
