pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__prompt_multiline_mode.snap
---
source: tests/tui/view_tests.rs
assertion_line: 481
expression: result.to_string()
---
State:
PromptSnapshot {
    artifact_name: "certificate",
    prompt_index: 0,
    total_prompts: 1,
    current_prompt: Some(
        PromptSnapshotEntry {
            name: "pem",
            description: Some(
                "Paste the certificate PEM content",
            ),
        },
    ),
    input_mode: "multiline",
    buffer: "-----BEGIN CERT-----",
    collected_count: 0,
}

Rendered:
"Prompt: certificate [1/1]                                   "
"                                                            "
"────────────────────────────────────────────────────────────"
"Field: pem                                                  "
"Paste the certificate PEM content                           "
"                                                            "
"                                                            "
"┌Input─────────────────────────────────────────────────────┐"
"│[multiline] > -----BEGIN CERT-----█                       │"
"└──────────────────────────────────────────────────────────┘"
"Ctrl+D: submit | Enter: newline | Esc: cancel               "
"                                                            "
