pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__prompt_second_of_three.snap
---
source: tests/tui/view_tests.rs
expression: output
---
"Prompt: gpg-key [2/3]                                       "
"                                                            "
"────────────────────────────────────────────────────────────"
"Field: name                                                 "
"Enter full name                                             "
"                                                            "
"                                                            "
"┌Input─────────────────────────────────────────────────────┐"
"│[line] > █                                                │"
"└──────────────────────────────────────────────────────────┘"
"Tab: change mode | Enter: submit | Esc: cancel              "
"                                                            "
