pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__prompt_with_input.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
PromptSnapshot {
    artifact_name: "ssh-key",
    prompt_index: 0,
    total_prompts: 1,
    current_prompt: Some(
        PromptSnapshotEntry {
            name: "passphrase",
            description: Some(
                "Enter the SSH key passphrase",
            ),
        },
    ),
    input_mode: "line",
    buffer: "my-secret-pass",
    collected_count: 0,
}

Rendered:
"Prompt: ssh-key [1/1]                                       "
"                                                            "
"────────────────────────────────────────────────────────────"
"Field: passphrase                                           "
"Enter the SSH key passphrase                                "
"                                                            "
"                                                            "
"┌Input [line]──────────────────────────────────────────────┐"
"│> my-secret-pass█                                         │"
"└──────────────────────────────────────────────────────────┘"
"Enter: submit | Esc: cancel                                 "
"                                                            "
