pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__shared_artifact_failed_config_error.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "[shared]",
            target_type: "shared",
            name: "shared-secret",
            status: "Failed { error: ConfigurationError { message: \"File definition mismatch: 'id_rsa' in machine-one but 'id_ed25519' in machine-two\" }, output: \"\" }",
            has_logs: true,
        },
    ],
    error: None,
}

Rendered:
"┌Artifacts (1) - j/k: move, Enter:┐┌Logs: shared-secret──────────────┐"
"│> ✗ [S] shared-secret (2 targets)││⚠ CONFIGURATION ERROR            │"
"│                                 ││Error: File definition mismatch: │"
"│                                 ││'id_rsa' in machine-one but      │"
"│                                 ││'id_ed25519' in machine-two      │"
"│                                 ││─────────────────────────────────│"
"│                                 ││──                               │"
"│                                 ││▼ Check                          │"
"│                                 ││  ! Validation failed: File      │"
"│                                 ││definition mismatch              │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"└─────────────────────────────────┘│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
