pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__shared_artifact_failed_runtime_error.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "[shared]",
            target_type: "shared",
            name: "shared-secret",
            status: "Failed { error: ScriptFailed { script_name: \"Generator\", exit_code: Some(1), stderr_summary: \"permission denied\" }, output: \"Error: permission denied\" }",
            has_logs: true,
        },
    ],
    error: None,
}

Rendered:
"┌Artifacts (1)────────────────────┐┌Logs: shared-secret──────────────┐"
"│> ✗ [S] shared-secret (2 targets)││✗ FAILED                         │"
"│                                 ││Error: Generator failed (exit    │"
"│                                 ││code 1)                          │"
"│                                 ││Output:                          │"
"│                                 ││  Error: permission denied       │"
"│                                 ││─────────────────────────────────│"
"│                                 ││──                               │"
"│                                 ││▼ Check                          │"
"│                                 ││  i Checking if generation is    │"
"│                                 ││needed...                        │"
"│                                 ││  ✓ Artifact needs regeneration  │"
"└─────────────────────────────────┘│                                 │"
"j/k:nav  Enter:gen  a:all  l:log  E│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
